--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "supertest": "~1.1.0"
   },
   "dependencies": {
-    "body-parser": "^1.13.1",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.13.1",
     "connect-multiparty": "~2.0.0",
     "express": "^4.13.0",
     "express-error-handler": "^1.0.1",
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^5.7.0",
     "moment": "*",
     "mongoose": "^4.4.16",
+    "node-mongoose-fixtures": "^0.2.4",
     "revalidator": "^0.3.1",
     "winston": "^1.0.0"
   },
